Added Native Input

--- a/force-app/main/default/lwc/inputWith3States/inputWith3States.html
+++ b/force-app/main/default/lwc/inputWith3States/inputWith3States.html
@@ -15,7 +15,7 @@
                         onchange={handleSelectUnselectAll}
                     ></lightning-input>
                 </div>
-                <div class="slds-size_1-of-1">
+                <div class="slds-size_1-of-1 slds-p-left_medium">
                     <lightning-checkbox-group
                         options={programmingLanguages}
                         value={selectedCheckboxes}
@@ -28,12 +28,34 @@
             </div>
         </div>
         <div class="slds-size_1-of-2">
-            <div class="slds-checkbox">
-                <input type="checkbox" name="" id="nativeInput" onchange={handleChange}>
-                <label class="slds-checkbox__label" for="nativeInput">
-                    <span class="slds-checkbox_faux" style="margin-right: 0.5rem;"></span>
-                    <span class="slds-form-element__label">Native Input</span>
-                </label>
+            <div class="slds-size_1-of-1">
+                <div class="slds-checkbox">
+                    <input
+                        type="checkbox"
+                        id="nativeInput"
+                        checked={checked}
+                        onchange={handleSelectUnselectAll}
+                    />
+                    <label class="slds-checkbox__label" for="nativeInput">
+                        <span
+                            class="slds-checkbox_faux"
+                            style="margin-right: 0.5rem"
+                        ></span>
+                        <span class="slds-form-element__label">
+                            Native Input
+                        </span>
+                    </label>
+                </div>
+            </div>
+            <div class="slds-size_1-of-1 slds-p-left_medium">
+                <lightning-checkbox-group
+                    options={programmingLanguages}
+                    value={selectedCheckboxes}
+                    label=""
+                    name=""
+                    variant="label-hidden"
+                    onchange={handleCheckboxGroupChange}
+                ></lightning-checkbox-group>
             </div>
         </div>
     </div>
